--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Курс - Git и GitHub</title>
-</head>
-<body>
-	<h1>Главная страница</h1>
-	<p>
-		На этой странице будет много интересного контента по Git и GitHub
-	</p>
-	<a href="pages/about.html">
-		Перейти на следующую страницу
-	</a>
-	
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Курс - Git и GitHub</title>
+  </head>
+  <body>
+    <h1>Главная страница</h1>
+    <p>На этой странице будет много интересного контента по Git и GitHub</p>
+    <a href="pages/about.html"> Перейти на следующую страницу </a>
+  </body>
 </html>
